Fix snapshot generation
:Release Notes:
Add flag turbo_instruction_scheduling for mksnapshot

:Detailed Notes:
Chomium v.120 introduce changes about V8 compilator and now it is
needed to add this flag to achieve consistency with between the runtime
and loaded snapshot. In other cases, the application may cause the
webruntime renderer process to crash.

:Testing Performed:
1. Launch app
luna-send -n 1 -f luna://com.webos.applicationManager/launch \
'{"id": "com.webos.app.test.v8snapshot"}'

2. Get PID of the current renderer process
pgrep -f "type=renderer"

3. Sideload Youtube, await loading complete.
Navigate, search.

4. Check PID again
pgrep -f "type=renderer"

5. There is no PID changes, app reload or crash is observed.

:QA Notes:
QWTC-9861

:Issues Addressed:
[WRQ-15280] [TAS Failed][TV][QWTC-9861] Verify webOSSystem.isKeyboardVisible

Change-Id: If54da1120eb66e8b2e9081366b14295fd983a117
Reviewed-on: http://gpro.lge.com/c/webosose/test-apps/+/404426
Reviewed-by: Vladislav Mukulov <vladislav.mukulov@lge.com>
Tested-by: Igor Britsky <igor.britsky@lge.com>
Reviewed-by: Donghyun Kim <donghyun11.kim@lge.com>
Reviewed-by: Wanchang Ryu <wanchang.ryu@lge.com>

--- a/com.webos.app.test.v8snapshot/CMakeLists.txt
+++ b/com.webos.app.test.v8snapshot/CMakeLists.txt
@@ -15,7 +15,7 @@ include(webOS/webOS)
 webos_modules_init(1 0 0 QUALIFIER RC4)
 
 add_custom_command(OUTPUT ${PROJECT_BINARY_DIR}/snapshot_blob.bin
-  COMMAND  ${V8_MKSNAPSHOT} --startup-blob snapshot_blob.bin ${CMAKE_SOURCE_DIR}/snapshot_test.js
+  COMMAND  ${V8_MKSNAPSHOT} --startup-blob snapshot_blob.bin --turbo_instruction_scheduling ${CMAKE_SOURCE_DIR}/snapshot_test.js
   DEPENDS snapshot_test.js)
 
 add_custom_target(mksnapshot ALL
